--- a/importer.ipynb
+++ b/importer.ipynb
@@ -73,6 +73,33 @@
    "source": [
     "!export PYTHONPATH=/Users/xingmo/workspace/py/tool/pojo/importer && python tests/test_tool.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.9, pytest-8.3.3, pluggy-1.5.0\n",
+      "rootdir: /Users/xingmo/workspace/py/tool/pojo/importer\n",
+      "configfile: pytest.ini\n",
+      "testpaths: tests\n",
+      "plugins: anyio-4.4.0\n",
+      "collected 1 item                                                               \u001b[0m\n",
+      "\n",
+      "tests/test_tool.py \u001b[32m.\u001b[0m\u001b[32m                                                     [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.00s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest"
+   ]
   }
  ],
  "metadata": {
